# shopping-svelte

./: README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/admin/: __init__.py  models.py
backend/app/api/: about.py  ads.py  cart.py  categories.py  faq.py  news.py  orders.py  products.py  upload.py
backend/app/core/: config.py  database.py  init_db.py  upload.py
backend/app/models/: __init__.py  about_us.py  ads.py  cart.py  cart_item.py  faq.py  news.py  order.py  order_item.py  product.py  product_category.py  user.py
docs/: 404.html  about-2.html  checkout-1.html  index-6-1.html  shop-cart-1.html  shop-left-sidebar-2.html  shop-product-detail-left-sidebar-2.html
frontend/: INSTALL.md  README.md  package.json  pnpm-lock.yaml  vite.config.js
frontend-vue/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend-vue/src/: App.vue  main.js  style.css
frontend-vue/src/components/: BannerCarousel.vue  CategoryNode.vue  CategoryTree.vue  Footer.vue  Header.vue  ProductCard.vue
frontend-vue/src/layouts/: DefaultLayout.vue
frontend-vue/src/router/: index.js
frontend-vue/src/services/: api.js
frontend-vue/src/stores/: cart.js
frontend-vue/src/views/: AboutView.vue  BlogView.vue  CartView.vue  CheckoutView.vue  ContactView.vue  FAQView.vue  HomeView.vue  NewsView.vue  ProductDetailView.vue  ProductListView.vue  ShopView.vue
frontend/src/: app.html
frontend/src/lib/: api.js
frontend/src/lib/components/: Footer.svelte  (+6 more)
frontend/src/routes/: +layout.svelte  +page.svelte
(+12 files in other folders)
